feat: tugas pertemuan 6 - get student feature
